# ABC-GenBench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  idea.md  pyproject.toml
.github/workflows/: ci.yml  leaderboard.yml
docs/: leaderboard.md  submissions.md
fixtures/demo/: manifest.json  tasks.json
fixtures/eval/: manifest.json  tasks.json
fixtures/hidden_eval/: manifest.json  public_tasks.json  scoring_overrides.json
leaderboard/: results.json
src/abcgenbench/: baseline.py  canon.py  cli.py  dataset.py  io.py  leaderboard.py  openai_runner.py  parsers.py  prompts.py  reporting.py  schema_loader.py  scoring.py  submission.py  validation.py
src/abcgenbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/abcgenbench/schemas/: __init__.py  benchmark_manifest.schema.json  leaderboard_entry.schema.json  leaderboard_results.schema.json  score_report.schema.json  submission.schema.json  task_instances.schema.json  task_overrides.schema.json
tests/: test_canon_and_parser.py  test_cli_smoke.py  test_openai_runner.py  test_scoring.py
