[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abcgenbench"
version = "0.2.0"
description = "Runnable benchmark toolkit for monophonic ABC melody generation and editing."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "jsonschema>=4.0.0",
    "music21>=9.9.1",
]

[project.scripts]
abcgenbench = "abcgenbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abcgenbench = ["schemas/*.json"]
